--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Enter the Email id
+                        Enter the Email ID
                     </td>
                     <td>
                         <input type="email" name="email" id="email" required>
